SUBDIRS = \
	imp_3dm \
	imp_3dmf \
	imp_3ds \
	imp_ac3d \
	imp_acf \
	imp_ar \
	imp_ase \
	imp_blend \
	imp_c4d \
	imp_cob \
	imp_dae \
	imp_dpm \
	imp_dxf \
	imp_flt \
	imp_glb \
	imp_heightfield \
	imp_iob \
	imp_joe \
	imp_kmz \
	imp_ldraw \
	imp_leocad \
	imp_lwo \
	imp_max \
	imp_maya \
	imp_md2 \
	imp_md3 \
	imp_nff \
	imp_obj \
	imp_osm \
	imp_q3o \
	imp_r4 \
	imp_rbh \
	imp_skp \
	imp_stl \
	imp_ta \
	imp_test \
	imp_vrml \
	imp_vrml2

